--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,35 +1,12 @@
 {% extends 'base.html' %}
-{% block title %}
-  Избранные авторы
-{% endblock %}
-{% load thumbnail %}
+{% block title %} Избранные авторы {% endblock %}
 {% block content %}
-<div class="container">
-  {% include 'posts/includes/switcher.html' %}
-</div>
-  <div class="container">
-    <h1>Избранные авторы</h1>
-    {% for post in page_obj %}
-      <ul>
-        <li>
-          Автор: <a href="{% url 'posts:profile' post.author.username %}"> {{ post.author.get_full_name }} </a>
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      <article class="col-12 col-md-9">
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-1" src="{{ im.url }}">
-        {% endthumbnail %}
-        <p>{{ post.text|linebreaks }}</p>
-        <p><a href="{% url 'posts:post_detail' post.id %}">подробная информация</a></p>
-        {% if post.group %}  
-          Все записи группы: <a href="{% url 'posts:group_list' post.group.slug %}">{{ post.group }}</a>
-        {% endif %}
-        {% if not forloop.last %}<hr>{% endif %}
-      </article>
-    {% endfor %}
-    {% include 'posts/includes/paginator.html' %}
-  </div>
+  <div class="container"> {% include 'posts/includes/switcher.html' with follow=True %} </div>
+    <div class="container">
+      <h1>Избранные авторы</h1>
+      {% for post in page_obj %}
+        {% include 'posts/includes/post.html'%}
+      {% endfor %}
+      {% include 'posts/includes/paginator.html' %}
+    </div>
 {% endblock %}
