--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,28 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}
-  Записи сообщества {{ group.title }}
-{% endblock %}
-{% load thumbnail %}
+{% block title %} Записи сообщества {{ group.title }} {% endblock %}
 {% block content %}
   <div class="container">
     <h1>{{ group }}</h1>
     <p>{{ group.description|linebreaks }}</p>
     {% for post in page_obj %}
-      <article class="col-12 col-md-9">
-        <ul>
-          <li>
-            Автор: <a href="{% url 'posts:profile' post.author.username %}"> {{ post.author.get_full_name }} </a>
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-        </ul>
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-1" src="{{ im.url }}">
-        {% endthumbnail %}
-        <p>{{ post.text|linebreaks }}</p>
-        {% if not forloop.last %}<hr>{% endif %}
-      </article>
+      {% include 'posts/includes/post.html' %}
     {% endfor %}
     {% include 'posts/includes/paginator.html' %}
   </div>
