--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -5,7 +5,7 @@
     <h1>{{ group }}</h1>
     <p>{{ group.description|linebreaks }}</p>
     {% for post in page_obj %}
-      {% include 'posts/includes/post.html' %}
+      {% include 'posts/includes/post.html' with group_list=True %}
     {% endfor %}
     {% include 'posts/includes/paginator.html' %}
   </div>
