--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -5,7 +5,7 @@
     <div class="container">
       <h1>Избранные авторы</h1>
       {% for post in page_obj %}
-        {% include 'posts/includes/post.html' with records_group=True %}
+        {% include 'posts/includes/post.html' %}
         {% if not forloop.last %}<hr>{% endif %}
       {% endfor %}
       {% include 'posts/includes/paginator.html' %}
